Fixed spacing issues at numerous places

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,10 @@ h1 {
     background-size: cover;
 }
 
+p {
+  padding-top: 30px;
+}
+
 #nav {
     position: fixed;
     top: -60px;
@@ -147,8 +151,7 @@ p {
     background: #FAFAFA;
     margin-bottom: 60px;
     margin-left: 70px;
-    margin-right: 70px;
-    margin-top: 30px; 
+    margin-right: 70px; 
   }
   
   .carousel-cell {
@@ -350,6 +353,7 @@ section {
   bottom: 20px;
   left: 50%;
   z-index: 2;
+  margin-left: -30px;
   display: inline-block;
   -webkit-transform: translate(0, -50%);
   transform: translate(0, -50%);
